--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     padding: 0;
     font-family: sans-serif;
 }
-img {
+
+.banner img{
     width: 100%;
 }
 nav{
@@ -71,8 +72,7 @@ main {
     height: 450px;
     box-shadow: 2px 1px 2px 2px;
     color: grey;
-    position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 130px;
 }
 .registrasi h2{
     padding: 10px;
@@ -173,4 +173,180 @@ nav a:hover{
     color: white;
 }
 
- 
+@media screen and (min-width: 768px){
+    
+    main {
+        width: 590px;
+        margin-left: auto;
+    }
+    .profil img, .kegiatan img{
+        width: 560px;
+        height: 350px;
+    }
+    .profil p, .kegiatan p{
+        font-size: 14px;
+    }
+    .profil h2, .kegiatan h2{
+        font-size: 20px;
+        padding: 40px 10px 5px 10px;
+        color: rgb(0, 152, 240);
+    }
+    .profil, .kegiatan{
+        height: 530px;
+    }
+    .registrasi { 
+        width: 590px;
+    } 
+    .registrasi form{
+        width: 270px;
+        height: 330px;
+    }
+    .registrasi h2{
+        font-size: 18px;
+    }
+    .registrasi h3{
+        padding-top: 15px;
+        padding-bottom: 5px;
+        font-size: 15px;
+    }
+    .registrasi input{
+        width: 250px;
+        height: 20px;
+    }
+    .registrasi select{
+        width: 250px;
+        height: 20px;
+        border: none;
+    }
+    .registrasi img{
+        padding-left: 330px;
+        width: 250px;
+        height: 250px;
+        margin-top: 25px;
+    }
+
+    .sidebar{
+        margin-left: auto;
+        margin-right: auto;
+        width: 110px;
+        height: 520px;
+    }
+    #ilc{
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+    .sidebar p{
+         font-size: 12px;
+    }
+    nav li{
+        display: inline-block;
+        font-size: 13px;
+    }
+    img {
+        width: 110px;
+    }
+    
+}
+
+@media screen and (max-width: 767px){
+    
+    nav li{
+        display: inline-block;
+        font-size: 9px;
+    }
+    img {
+        width: 250px;
+    }
+    main {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        margin-left: 5px;
+    }
+    .profil img, .kegiatan img{
+        width: 90%;
+        height: 125px;
+    }
+    .profil p, .kegiatan p{
+        font-size: 60%;
+    }
+    .profil h2, .kegiatan h2{
+        font-size: 12px;
+        padding: 20px 10px 5px 10px;
+        color: rgb(0, 152, 240);
+    }
+    .profil, .kegiatan {
+        box-shadow: 0.5px 0.5px 1px 0.5px;
+        color: grey;
+        height: 30%;
+    }
+    .registrasi { 
+        width: 100%;
+        box-shadow: 0.5px 0.5px 1px 0.5px; 
+    } 
+
+    .registrasi form{
+        width: 35%;
+        height: 50%;
+        margin-left: 10px;
+    }
+    .registrasi h2{
+        font-size: 12px;
+    }
+    .registrasi h3{
+        padding-top: 15px;
+        padding-bottom: 5px;
+        font-size: 12px;
+    }
+    .registrasi label{
+        font-size: 12px;
+    }
+    .registrasi input{
+        width: 90%;
+        height: 5%;
+    }
+    .registrasi select{
+        width: 90px;
+        height: 18px;
+        border: none;
+    }
+    .registrasi img{
+    padding-left: 260px;
+    width: 90px;
+    height: 90px;
+    margin-top: 320px;
+}
+    .sidebar{
+        width: 60%;
+        height: 50%;
+        margin-right: 100px;
+        box-shadow: 0.5px 0.5px 1px 0.5px; 
+        
+    }
+    #ilc{ 
+        font-size: 60%;
+    }
+    .sidebar h3{
+        margin-top: 20px;
+        font-size: 80%;
+    }
+    #txtlogo{
+        font-size: 80%;
+        margin-bottom: 5px;
+    }
+    #info {
+        font-size: 80%;
+        margin-bottom: 5px;
+    }
+    .sidebar p{
+        font-size: 60%;
+    }
+    .sidebar img{
+        width: 100%;
+        height: 100%;    
+    }
+    .copyright {
+        font-size: 60%;
+    }
+}
